agrege plantilla para carreras y solucione unos problemas de controladores